kubernetes/k3s-01/workloads/owntracks-recorder/stateful-set.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: owntracks-recorder
  namespace: owntracks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: owntracks-recorder
  template:
    metadata:
      labels:
        app: owntracks-recorder
    spec:
      containers:
        - name: owntracks-recorder
          image: docker.io/owntracks/recorder:1.0.4@sha256:bb292a481c94ef40bde26f52c8d3868d1395bd2da15bc9405be889e13f686a1b
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          ports:
            - containerPort: 8083
          volumeMounts:
            - name: owntracks
              mountPath: /store
      volumes:
        - name: owntracks
          persistentVolumeClaim:
            claimName: owntracks
