kubernetes/k3s-01/workloads/owntracks-recorder/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: owntracks-recorder
  namespace: owntracks
spec:
  type: ClusterIP
  ports:
    - port: 8083
      targetPort: 8083
      protocol: TCP
  selector:
    app: owntracks-recorder
