kubernetes/k3s-01/workloads/owntracks-recorder/network-policy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: owntracks-recorder
  namespace: owntracks
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector:
    matchLabels:
      app: owntracks-recorder
  ingress:
    - from:
      - podSelector:
          matchLabels:
            name: owntracks-frontend
      ports:
        - protocol: TCP
          port: 8083
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: mosquitto
        podSelector:
          matchLabels:
            app: mosquitto
      ports:
        - protocol: TCP
          port: 1883
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
